--- a/templates/brightcove/video-renderer.mustache
+++ b/templates/brightcove/video-renderer.mustache
@@ -19,26 +19,41 @@
     Example context (json):
     {
             "width": 100,
-            "units": '%',
+            "unitstxt": '%',
             "player_id": 'default',
             "account_id": null',
-            "video_id": null',
             "playlist_id": null,
+            "video_id": null'
     }
 }}
-<div style="max-width: {{width}}{{units}}; margin: auto;">
-    <video-js
-            id="brightcove-player-{{player_id}}"
-            data-account="{{account_id}}"
-            data-player="{{player_id}}"
-            data-embed="default"
-            data-video-id="{{video_id}}"
-            data-playlist-id="{{playlist_id}}"
-            data-application-id=""
-            class="vjs-big-play-centered vjs-fluid"
-            controls
-    >
-    </video-js>
+<div style="max-width: {{width}}{{unitstxt}}; margin: auto;">
+    {{#playlist_id}}
+        <video-js
+                id="brightcove-player-{{player_id}}"
+                data-account="{{account_id}}"
+                data-player="{{player_id}}"
+                data-embed="default"
+                data-playlist-id="{{playlist_id}}"
+                data-application-id=""
+                class="vjs-big-play-centered vjs-fluid"
+                controls
+        >
+        </video-js>
+    {{/playlist_id}}
+
+    {{^playlist_id}}
+        <video-js
+                id="brightcove-player-{{player_id}}"
+                data-account="{{account_id}}"
+                data-player="{{player_id}}"
+                data-embed="default"
+                data-video-id="{{video_id}}"
+                data-application-id=""
+                class="vjs-big-play-centered vjs-fluid"
+                controls
+        >
+        </video-js>
+    {{/playlist_id}}
 </div>
 {{#js}}
     M.util.js_pending('mod_html5player/brightcove');
